dev & style: caught up local codebase to remote, fixed IG image in footer

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -58,7 +58,7 @@
           "main_linklist": "main-menu",
           "message": true,
           "home_page_only": false,
-          "message_text": "FREE SHIPPING WHEN YOU BUY 3 OR MORE HAIR MASKS!",
+          "message_text": "FREE SHIPPING WHEN YOU BUY 3 OR MORE HAIR MASKS! (US ONLY)",
           "message_link": "",
           "color_bg": "#ff00ec",
           "color_text": "#ffffff"
